--- a/TD1/composer.json
+++ b/TD1/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "php": "^8.2",
     "illuminate/database": "^10.0",
-    "vlucas/phpdotenv": "^5.5"
+    "vlucas/phpdotenv": "^5.5",
+    "ext-pdo": "*"
   },
   "autoload": {
     "psr-4": {
