--- a/TD1/conf/.env
+++ b/TD1/conf/.env
@@ -1,4 +1,6 @@
-POSTGRES_PASSWORD=root
-POSTGRES_USER=root
-POSTGRES_DB=td1
+MYSQL_ROOT_PASSWORD=root
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=td1
+
 
