--- a/TD1/conf/docker-compose.yml
+++ b/TD1/conf/docker-compose.yml
@@ -1,15 +1,17 @@
+version: '3.8'
+
 networks:
   td1.net:
     driver: bridge
 
 services:
-  postgres:
-    image: 'postgres:latest'
+  mysql:
+    image: 'mysql:latest'
     env_file: .env
     ports:
-      - "5432:5432"
+      - "3307:3306"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - mysql_data:/var/lib/mysql
     networks:
       - td1.net
 
@@ -19,9 +21,6 @@ services:
       - '8080:8080'
     networks:
       - td1.net
-    command: php -S 0.0.0.0:8080 -t /var/www/html
 
 volumes:
-  postgres_data:
-
-
+  mysql_data:
