--- a/TD2/conf_td2/.env
+++ b/TD2/conf_td2/.env
@@ -1,6 +1,6 @@
-MYSQL_ROOT_PASSWORD=root
-MYSQL_USER=rgc
-MYSQL_PASSWORD=rgc
-MYSQL_DATABASE=td2
+POSTGRES_USER=rgc
+POSTGRES_PASSWORD=rgc
+POSTGRES_DB=td1
+
 
 
