--- a/TD2/composer.json
+++ b/TD2/composer.json
@@ -6,7 +6,8 @@
     "php": "^8.0",
     "doctrine/orm": "^2.12",
     "doctrine/dbal": "^3.0",
-    "symfony/yaml": "^5.0"
+    "symfony/yaml": "^5.0",
+    "symfony/cache": "^7.2"
   },
   "autoload": {
     "psr-4": {
