--- a/mongo/mongo/docker-compose.yml
+++ b/mongo/mongo/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.8"
 
 networks:
   catamongo.net:
@@ -7,8 +7,8 @@ networks:
 services:
   php:
     build:
-        context: build
-        dockerfile: 8.3-cli.Dockerfile
+      context: build
+      dockerfile: 8.3-cli.Dockerfile
     ports:
       - "12080:80"
       - "12443:443"
@@ -19,23 +19,24 @@ services:
       - catamongo.net
     command: php -S 0.0.0.0:80 -t /var/php/public
 
-  ################################################
-  # mongodb & mongo-express
-  ###############################################
   mongo:
     image: mongo:latest
     volumes:
-    - ./data:/var/data
+      - ./data:/var/data
     working_dir: /var/data
     networks:
-    - catamongo.net
+      - catamongo.net
     ports:
-    - 27017:27017
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${ME_CONFIG_MONGODB_ADMINUSERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${ME_CONFIG_MONGODB_ADMINPASSWORD}
 
   mongo-express:
     image: mongo-express:latest
     networks:
-    - catamongo.net
+      - catamongo.net
     ports:
-    - "8081:8081"
-
+      - "8081:8081"
+    env_file:
+      - .env
