--- a/TD4/docker-compose.yml
+++ b/TD4/docker-compose.yml
@@ -1,30 +1,27 @@
+version: "3.9"
 services:
   database:
     image: postgis/postgis:13-master
-    # Required when running on platform other than amd64, like Apple M1/M2:
-    #platform: linux/amd64
     volumes:
       - ./data/database:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: "directus"
-      POSTGRES_PASSWORD: "directus"
-      POSTGRES_DB: "directus"
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     healthcheck:
-      test: [ "CMD", "pg_isready", "--host=localhost", "--username=directus" ]
+      test: ["CMD", "pg_isready", "--host=localhost", "--username=${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_interval: 5s
       start_period: 30s
 
   cache:
     image: redis:6
     healthcheck:
-      test: [ "CMD-SHELL", "[ $$(redis-cli ping) = 'PONG' ]" ]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
-      start_interval: 5s
       start_period: 30s
 
   directus:
@@ -40,34 +37,26 @@ services:
       cache:
         condition: service_healthy
     environment:
-      KEY: "6116487b-cda1-52c2-b5b5-c8022c45e263"
-      SECRET: "255d861b-5ea1-5996-9aa3-922530ec40b1"
+      KEY: ${DIRECTUS_KEY}
+      SECRET: ${DIRECTUS_SECRET}
 
       DB_CLIENT: "pg"
-      DB_HOST: "database"
-      DB_PORT: "5432"
-      DB_DATABASE: "directus"
-      DB_USER: "directus"
-      DB_PASSWORD: "directus"
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_DATABASE: ${POSTGRES_DB}
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
 
       CACHE_ENABLED: "false"
       CACHE_AUTO_PURGE: "true"
       CACHE_STORE: "redis"
-      REDIS: "redis://cache:6379"
+      REDIS: ${REDIS_URL}
 
       GRAPHQL_ENABLED: "true"
-      ADMIN_EMAIL: "admin@dwm3.net"
-      ADMIN_PASSWORD: "PASSWORD_TO_MODIFY"
-
-      # Make sure to set this in production
-      # (see https://docs.directus.io/self-hosted/config-options#general)
-      # PUBLIC_URL: "https://directus.example.com"
-
-    # Environment variables can also be defined in a file (for example `.env`):
-    # env_file:
-    #	  - .env
+      ADMIN_EMAIL: ${ADMIN_EMAIL}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
 
   adminer:
     image: adminer
     ports:
-      - '8888:8080'
+      - "8888:8080"
