--- a/TD4/docker-compose.yml
+++ b/TD4/docker-compose.yml
@@ -18,14 +18,15 @@ services:
   cache:
     image: redis:6
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD-SHELL", "[ $$(redis-cli ping) = 'PONG' ]"]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_interval: 5s
       start_period: 30s
 
   directus:
-    image: directus/directus:11.1.1
+    image: directus/directus:11.3.5
     ports:
       - 8055:8055
     volumes:
