--- a/TD2/docker-compose.yml
+++ b/TD2/docker-compose.yml
@@ -28,8 +28,8 @@ services:
 
   php:
     build:
-      context: ../
-      dockerfile: conf_td2/Dockerfile
+      context: ../..
+      dockerfile: Dockerfile
     volumes:
       - ../src:/var/www/html
     ports:
